--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: RxHive
+description: RxHive is an open-source platform built on Jekyll, designed to collaboratively construct a comprehensive medicine database. By combining AI-generated content and crowd-sourced contributions, RxHive empowers healthcare professionals, researchers, and the wider community to build a reliable, ever-evolving repository of drug and treatment information.
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
