--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,21 @@
 title: RxHive
 description: RxHive is an open-source platform built on Jekyll, designed to collaboratively construct a comprehensive medicine database. By combining AI-generated content and crowd-sourced contributions, RxHive empowers healthcare professionals, researchers, and the wider community to build a reliable, ever-evolving repository of drug and treatment information.
 theme: just-the-docs
-
 url: https://RxHive.github.io
 
-# Enable the generic collection
 collections:
   generic:
     output: true
     permalink: /generic/:path/
-
-# Just the Docs configuration
 just_the_docs:
-  # Automatically display pages in navigation, except for generic files
   collections:
     generic:
       output: true
+footer_content: "Made with ❤️ at <a href=\"https://www.zynapte.com\">Zynapte</a> and the <a href=\"https://www.github.com\">GitHub Community</a>."
+last_edit_timestamp: true
+last_edit_time_format: "%b %e %Y at %I:%M %p"
+gh_edit_link: true
+gh_edit_link_text: "Edit this page on GitHub."
+gh_edit_repository: "https://github.com/RxHive/RxHive.github.io" 
+gh_edit_branch: "main" 
+gh_edit_view_mode: "tree"
