--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: RxHive
 description: RxHive is an open-source platform built on Jekyll, designed to collaboratively construct a comprehensive medicine database. By combining AI-generated content and crowd-sourced contributions, RxHive empowers healthcare professionals, researchers, and the wider community to build a reliable, ever-evolving repository of drug and treatment information.
 theme: just-the-docs
 
-url: https://RxHive.github.io
-baseurl: "https://RxHive.github.io"
+url: https://rxhive.zynapte.com
+baseurl: "https://rxhive.zynapte.com"
 
 # Collections configuration
 collections:
