--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,16 @@ theme: just-the-docs
 color_scheme: dark
 url: https://rxhive.zynapte.com
 baseurl: "https://rxhive.zynapte.com"
-
+search_enabled: true
+search:
+  heading_level: 2
+  previews: 3
+  preview_words_before: 5
+  preview_words_after: 10
+  tokenizer_separator: /[\s/]+/
+  rel_url: false
+  button: true
+  focus_shortcut_key: 'k'
 # Collections configuration
 collections:
   generic:
