--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ description: RxHive is an open-source platform built on Jekyll, designed to coll
 theme: just-the-docs
 color_scheme: dark
 url: https://rxhive.zynapte.com
-baseurl: ""
+baseurl: "" # Set to "" for root deployment. Update if deploying to a subdirectory.
+
+# Enable search functionality
 search_enabled: true
 search:
   heading_level: 2
@@ -14,6 +16,7 @@ search:
   rel_url: false
   button: true
   focus_shortcut_key: 'k'
+
 # Collections configuration
 collections:
   generic:
@@ -23,16 +26,17 @@ collections:
     output: true
     permalink: /composition/:path/
 
+# Just the Docs theme configuration
 just_the_docs:
   collections:
     generic:
       name: Generic
-      nav_exclude: true    # Exclude the collection from main navigation
+      nav_exclude: true    # Exclude from main navigation
       nav_fold: true       # Fold collection pages in navigation (if included later)
       output: true
     composition:
       name: Composition
-      nav_exclude: true    # Exclude the collection from main navigation
+      nav_exclude: true    # Exclude from main navigation
       nav_fold: true       # Fold collection pages in navigation (if included later)
       output: true
   footer_content: "Made with ❤️ at <a href='https://www.zynapte.com'>Zynapte</a> and the <a href='https://www.github.com'>GitHub Community</a>."
@@ -51,8 +55,13 @@ defaults:
     values:
       layout: "default"  # Use default layout for generic pages
       output: true
+  - scope:
+      path: "composition/"
+    values:
+      layout: "default"  # Use default layout for composition pages
+      output: true
 
-# Include generic folder in processing
+# Include files and directories for Jekyll to process
 include:
   - generic
   - composition
@@ -66,17 +75,19 @@ include:
 plugins:
   - jekyll-sitemap
 
-# Exclude specific files and folders from the sitemap
+# Exclude specific files and folders from processing
 exclude:
   - README.md
   - Gemfile
   - Gemfile.lock
   - vendor/
 
-# Sitemap settings (optional)
+# Sitemap configuration
 sitemap:
-  filename: sitemap.xml # Default is sitemap.xml
+  filename: sitemap.xml
   exclude:
     - /404.html
+
+# Google Analytics configuration
 ga_tracking: G-JMBXT0N7K0
-ga_tracking_anonymize_ip: true 
+ga_tracking_anonymize_ip: true
