--- a/_config.yml
+++ b/_config.yml
@@ -65,8 +65,7 @@ defaults:
 include:
   - generic
   - composition
-  - generic-search.json
-  - composition-search.json
+  - search.json
   - robots.txt
   - google46cc0abefa86d150.html
   - BingSiteAuth.xml
