--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ gh_edit_link: true
 gh_edit_link_text: "Edit this page on GitHub."
 gh_edit_repository: "https://github.com/RxHive/RxHive.github.io"
 gh_edit_branch: "main"
-gh_edit_view_mode: "tree"
+gh_edit_view_mode: "edit"
 
 compress_html:
   endings: "all" # Collapse all specified HTML endings
