--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/configure-pages@v5
         
       - name: Build with Jekyll
-        run: bundle exec jekyll build --incremental
+        run: bundle exec jekyll build --incremental --verbose
         env:
           JEKYLL_ENV: production
         
